# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2021 Jose David M. for circuitpython
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-displayio-cartesian"
description = "A Cartesian plane widget for displaying graphical information."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Jose David M."}
]
urls = {Homepage = "https://github.com/circuitpython/CircuitPython_DisplayIO_Cartesian"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "displayio_cartesian",
    "displayio",
    "widget",
    "graphics",
    "gui",
    "graph",
    "chart",
    "graphic",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["displayio_cartesian"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
